tests/error/type_mismatch/let.bas
 1 REM type mismatch
10 LET A  = 21
11 LET A  = "STRING"
12 LET A$ = 21
13 LET A% = "STRING"